feat: added move handling features, unit tests for move handling, and starting steps for battles