@@ -3,6 +3,7 @@ package services.admin;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,36 +20,29 @@ import alchemy.exceptions.ConfirmationException;
 import alchemy.exceptions.ProcessException;
 import alchemy.exceptions.confirmation.admin.AdminConfirmationError;
 import alchemy.exceptions.process.admin.AdminProcessError;
-import alchemy.model.Gene;
 import alchemy.model.GeneIdentificationDTO;
+import alchemy.model.pets.genes.Gene;
 import alchemy.repositories.GeneRepository;
-import alchemy.services.AdminService;
+import alchemy.services.admin.GeneService;
 import config.AbstractTest;
 
 @DataJpaTest(showSql = false)
 @ActiveProfiles("test")
 @ContextConfiguration(classes = Autoconfiguration.class)
-public class AdminServiceTest extends AbstractTest {
+public class GeneServiceTest extends AbstractTest {
 	
     @Autowired private TestEntityManager entityManager;
     @Autowired private GeneRepository geneRepository;
-    @Autowired private AdminService adminService;
-    
-    private void assertSavedList(List<String> images) {
-    	for (String image : images) {
-    		assertTrue(geneRepository.existsById(image));
-    	}
-    	assertTrue(geneRepository.count() == images.size());
-    }
+    @Autowired private GeneService geneService;
     
     private void assertResultList(List<Gene> result, List<String> images) {
     	for (String image : images) {
-    		assertTrue(result.stream().anyMatch(gene -> gene.getId().equals(image)));
+    		assertTrue(result.stream().anyMatch(gene -> gene.getImage().equals(image)));
     	}
     	assertTrue(geneRepository.count() == images.size());
     }
     
-    private void assertAdminDuplicateOrMissingException(AdminProcessError expectedError, Executable call, List<String> expectedParams) {
+    private void assertDuplicateOrMissingException(AdminProcessError expectedError, Executable call, List<String> expectedParams) {
     	ProcessException exception = assertThrows(ProcessException.class, call);
     	assertTrue(expectedError.code.equals(exception.getError().getCode()));
     	assertTrue(expectedError.description.equals(exception.getError().getDescription()));
@@ -75,7 +69,7 @@ public class AdminServiceTest extends AbstractTest {
     
     private Gene createGene(String image, String... tags) {
     	Gene gene = Gene.builder()
-			.id(image)
+			.image(image)
 			.tags(List.of(tags))
 			.build();
     	
@@ -87,8 +81,7 @@ public class AdminServiceTest extends AbstractTest {
     	String image = "/assets/unicorn-horn.png";
     	createGene(image, "Horn", "Fae");
     	
-    	assertSavedList(List.of(image));
-    	assertResultList(adminService.getAllGenes(), List.of(image));
+    	assertResultList(geneService.getAllGenes(), List.of(image));
     }
     
     @Test
@@ -96,16 +89,20 @@ public class AdminServiceTest extends AbstractTest {
     	String image = "/assets/unicorn-horn.png";
     	createGene(image, "Horn", "Fae");
     	
-    	assertSavedList(List.of(image));
-    	
+    	assertResultList(geneService.getAllGenes(), List.of(image));
+
     	String creation1 = "/assets/hellhound-horns.png";
     	String creation2 = "/assets/bull-horns.png";
     	
-    	List<String> listImagesToCreate = List.of(creation1, creation2);
-    	List<GeneIdentificationDTO> listGenesToCreate = listImagesToCreate.stream()
-    			.map(img -> GeneIdentificationDTO.builder().image(img).build())
-    			.collect(Collectors.toList());
-    	List<Gene> result = adminService.createGenes(listGenesToCreate);
+    	GeneIdentificationDTO dto1 = GeneIdentificationDTO.builder()
+    			.image(creation1)
+    			.build();
+    	
+    	GeneIdentificationDTO dto2 = GeneIdentificationDTO.builder()
+    			.image(creation2)
+    			.build();
+    	
+    	List<Gene> result = geneService.createGenes(List.of(dto1, dto2));
     	
     	assertResultList(result, List.of(image, creation1, creation2));
     }
@@ -115,18 +112,22 @@ public class AdminServiceTest extends AbstractTest {
     	String image = "/assets/unicorn-horn.png";
     	createGene(image, "Horn", "Fae");
     	
-    	assertSavedList(List.of(image));
+    	assertResultList(geneService.getAllGenes(), List.of(image));
     	
-    	String duplicate = "/assets/unicorn-horn.png";
     	String creation = "/assets/bull-horns.png";
     	
-    	List<String> listImagesToCreate = List.of(duplicate, creation);
-    	List<GeneIdentificationDTO> listGenesToCreate = listImagesToCreate.stream()
-    			.map(img -> GeneIdentificationDTO.builder().image(img).build())
-    			.collect(Collectors.toList());
+    	GeneIdentificationDTO dto1 = GeneIdentificationDTO.builder()
+    			.image(image)
+    			.build();
     	
-    	assertAdminDuplicateOrMissingException(AdminProcessError.GENE_CREATION_ALREADY_EXIST,
-    			() -> adminService.createGenes(listGenesToCreate), List.of(duplicate));
+    	GeneIdentificationDTO dto2 = GeneIdentificationDTO.builder()
+    			.image(creation)
+    			.build();
+    	
+    	List<GeneIdentificationDTO> listGenesToCreate = List.of(dto1, dto2);
+    	
+    	assertDuplicateOrMissingException(AdminProcessError.GENE_CREATION_ALREADY_EXIST,
+    			() -> geneService.createGenes(listGenesToCreate), List.of(image));
     }
     
     @Test
@@ -136,7 +137,7 @@ public class AdminServiceTest extends AbstractTest {
     	createGene(image1, "Horn", "Fae");
     	createGene(image2, "Horn", "Beast");
     	
-    	assertTrue(geneRepository.count() == 2);
+    	assertResultList(geneService.getAllGenes(), List.of(image1, image2));
     	
     	String deletion = "/assets/unicorn-horn.png";
     	
@@ -144,7 +145,7 @@ public class AdminServiceTest extends AbstractTest {
     	List<GeneIdentificationDTO> listGenesToDelete = listImagesToDelete.stream()
     			.map(img -> GeneIdentificationDTO.builder().image(img).build())
     			.collect(Collectors.toList());
-    	List<Gene> result = adminService.deleteGenes(listGenesToDelete);
+    	List<Gene> result = geneService.deleteGenes(listGenesToDelete);
     	
     	assertResultList(result, List.of(image2));
     }
@@ -154,7 +155,7 @@ public class AdminServiceTest extends AbstractTest {
     	String image = "/assets/unicorn-horn.png";
     	createGene(image, "Horn", "Fae");
     	
-    	assertTrue(geneRepository.count() == 1);
+    	assertResultList(geneService.getAllGenes(), List.of(image));
     	
     	String deletion = "/assets/unicorn-horn.png";
     	String missing = "/assets/bull-horns.png";
@@ -164,38 +165,38 @@ public class AdminServiceTest extends AbstractTest {
     			.map(img -> GeneIdentificationDTO.builder().image(img).build())
     			.collect(Collectors.toList());
     	
-    	assertAdminDuplicateOrMissingException(AdminProcessError.GENE_DELETION_DOES_NOT_EXIST,
-    			() -> adminService.deleteGenes(listGenesToDelete), List.of(missing));
+    	assertDuplicateOrMissingException(AdminProcessError.GENE_DELETION_DOES_NOT_EXIST,
+    			() -> geneService.deleteGenes(listGenesToDelete), List.of(missing));
     }
     
     @Test
     void synchronizeGenesNoDeletionSuccessTest() {
-    	assertTrue(geneRepository.count() == 0);
-    	
-    	String expected = "/assets/unicorn-horn.png";
-    	
-    	List<GeneIdentificationDTO> listExpectedGenes = List.of(expected).stream()
-    			.map(img -> GeneIdentificationDTO.builder().image(img).build())
-    			.collect(Collectors.toList());
-    	
-    	List<Gene> result = adminService.synchronizeGenes(listExpectedGenes, false);
+    	assertResultList(geneService.getAllGenes(), Collections.emptyList());
 
-    	assertResultList(result, List.of(expected));
+    	String expectedImage = "/assets/unicorn-horn.png";
+    	
+    	GeneIdentificationDTO dto = GeneIdentificationDTO.builder()
+    			.image(expectedImage)
+    			.build();
+    	
+    	List<Gene> result = geneService.synchronizeGenes(List.of(dto), false);
+
+    	assertResultList(result, List.of(expectedImage));
     }
     
     @Test
     void synchronizeGenesNoDeletionForcedSuccessTest() {
-    	assertTrue(geneRepository.count() == 0);
-    	
-    	String expected = "/assets/unicorn-horn.png";
-    	
-    	List<GeneIdentificationDTO> listExpectedGenes = List.of(expected).stream()
-    			.map(img -> GeneIdentificationDTO.builder().image(img).build())
-    			.collect(Collectors.toList());
-    	
-    	List<Gene> result = adminService.synchronizeGenes(listExpectedGenes, true);
+    	assertResultList(geneService.getAllGenes(), Collections.emptyList());
 
-    	assertResultList(result, List.of(expected));
+    	String expectedImage = "/assets/unicorn-horn.png";
+    	
+    	GeneIdentificationDTO dto = GeneIdentificationDTO.builder()
+    			.image(expectedImage)
+    			.build();
+    	
+    	List<Gene> result = geneService.synchronizeGenes(List.of(dto), true);
+
+    	assertResultList(result, List.of(expectedImage));
     }
     
     @Test
@@ -203,7 +204,7 @@ public class AdminServiceTest extends AbstractTest {
     	String current = "/assets/unicorn-horn.png";
     	createGene(current, "Horn", "Fae");
     	
-    	assertTrue(geneRepository.count() == 1);
+    	assertResultList(geneService.getAllGenes(), List.of(current));
     	
     	String expected = "/assets/bull-horns.png";
     	
@@ -212,7 +213,7 @@ public class AdminServiceTest extends AbstractTest {
     			.collect(Collectors.toList());
 
     	assertConfirmationException(AdminConfirmationError.GENES_SYNCHRONIZATION_CONFIRM, 
-    			() -> adminService.synchronizeGenes(listExpectedGenes, false), List.of(current));
+    			() -> geneService.synchronizeGenes(listExpectedGenes, false), List.of(current));
     }
     
     @Test
@@ -220,17 +221,17 @@ public class AdminServiceTest extends AbstractTest {
     	String current = "/assets/unicorn-horn.png";
     	createGene(current, "Horn", "Fae");
     	
-    	assertTrue(geneRepository.count() == 1);
+    	assertResultList(geneService.getAllGenes(), List.of(current));
     	
-    	String expected = "/assets/bull-horns.png";
+    	String expectedImage = "/assets/unicorn-horn.png";
     	
-    	List<GeneIdentificationDTO> listExpectedGenes = List.of(expected).stream()
-    			.map(img -> GeneIdentificationDTO.builder().image(img).build())
-    			.collect(Collectors.toList());
+    	GeneIdentificationDTO dto = GeneIdentificationDTO.builder()
+    			.image(expectedImage)
+    			.build();
     	
-    	List<Gene> result = adminService.synchronizeGenes(listExpectedGenes, true);
+    	List<Gene> result = geneService.synchronizeGenes(List.of(dto), true);
 
-    	assertResultList(result, List.of(expected));
+    	assertResultList(result, List.of(expectedImage));
     }
 
 }
